- Fixed an issue with the User Input Step where the existing Coupon field value is not restored. Requires Coupons Add-On v2.9.2 or greater.
- Fixed an issue with the User Input Step where the Coupon usage count is not updated.
- Fixed a PHP notice which occurs when the shortcode is processed and WordPress isn't able to provide the current post object.
- Fixed a PHP warning on the inbox page when a step is configured with a delay based due date and the offset setting contains non-numeric characters.
- Fixed notices with PHP 7.4.
- Fixed an issue where the Dropbox step does not complete with Dropbox Add-On 2.4.1+.
- Fixed an issue where the report data for assignees by month is incorrect.
- Fixed an issue where the Discussion Field view more/less effect would not operate on the Form > Entries screen (both view and edit).
- Fixed an issue where the scripts and styles are not enqueued when using the shortcode or block in a reusable block.
- Fixed an issue in the step settings page where duplicate Workflow step icons appear for the Gravity Forms HubSpot Add-on and third-party HubSpot Add-on. IMPORTANT: check that your HubSpot workflow steps are correct after updating to this version.
- Fixed a bug with 'Schedule expiration' on Workflow step. 'Next Step if Expired' option should only appear when 'Status after expiration' is set as 'Expired'.
- Fixed the field filter not appearing on the status page when the form_id constraint is set to an array using the gravityflow_status_filter hook.
- Fixed an issue for the completed URL of Partial Entry Submission step, which was directing to a new form entry. Updated to return a message stating that the entry was already completed.
- Fixed an extraneous debug logging statement.
- Fixed an issue with the Connected Apps comparing authorization value from translated text which was flagging to false.